# meaningful-transparency

./: .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  data_generation.ipynb  index.html  llm_classifier.ipynb  main.py  pyproject.toml
datasets/: GoldStandard2024.csv  GoldStanderDataSet.csv
datasets/train_test_datasets/: test.csv  train.csv
notebooks/: analysis.ipynb  analysis_ihra.ipynb  data_cleaning.ipynb  data_generation.ipynb  llm_classifier.ipynb  test_llm.ipynb  traditional_classifier.ipynb
outputs/: twitter_posts_classified_IHRA_2025-09-07-H:11-M:11.csv  twitter_posts_to_manual_review.csv
outputs/500_samples_ihra_half_antisemitic/: error_analysis.csv  twitter_posts_classified_IHRA_2025-09-10-H:17-M:36.csv
outputs/500_samples_ihra_half_antisemitic_no_urls/: error_analysis.csv  error_analysis_ihra.csv  twitter_posts_classified_IHRA_2025-09-11-H:11-M:24.csv
outputs/init_experiment/: twitter_posts_classified_2025-09-06-H:19-M:31.csv  twitter_posts_classified_JD_2025-09-07-H:12-M:31.csv
prompts/: annotation-guidelines-best-practices.md
prompts/annotation_guidelines/: IHRA Definition.md  IHRA Definition.xml  IHRA-ISCAI.xml  IHRA.xml  JD.xml  JDA.xml  Jerusalem Declaration.md  info.md
prompts/antisemitism_definitions/: jerusalem_decl.md  nexus.md
prompts/archive/old_def/: IHRA.md  (+2 more)
src/: classify_twitter_posts.py  constants.py  content_moderation_api.py  data_cleaning.py  data_prep.py  exp_scripts.sh  sh_scripts.sh  utils.py
thoughts/: data-synthesis.md  general.md  moderation_api_providers.md  well-known-datasets.md
(+1 files in other folders)
