[project]
name = "meaningful-transparency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.179.0",
    "jupyter>=1.1.1",
    "lab>=8.4",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "tiktoken>=0.11.0",
]
