[project]
name = "meaningful-transparency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.179.0",
    "isort>=6.0.1",
    "itables>=2.5.2",
    "jupyter>=1.1.1",
    "lab>=8.4",
    "matplotlib-venn>=1.1.2",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "ruff>=0.12.12",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
